--- a/grid.html
+++ b/grid.html
@@ -22,18 +22,37 @@
     var canvas = document.getElementById("asteroids");
     var context = canvas.getContext('2d');
     var width = canvas.width;
-    context.lineWidth = 1;
+    context.lineWidth = 0.5;
     context.strokeStyle = "green";
     var height = canvas.height;
+    context.font = '10px serif';
+    context.fillStyle = 'red';
     for (var y = 10; y < canvas.width; y = y + 10) {
+        context.beginPath();
+        if (y % 50 == 0) {
+            context.lineWidth = 1;
+        } else {
+            context.lineWidth = 0.5;
+        }
         context.moveTo(0, y);
         context.lineTo(canvas.height, y);
+        context.stroke();
     }
+    var bucket = 0;
     for (var x = 10; x < canvas.width; x = x + 10) {
+        context.beginPath();
+        if (x % 50 == 0) {
+            bucket = x;
+            context.lineWidth = 1;
+        } else {
+            context.lineWidth = 0.5;
+        }
         context.moveTo(x, 0);
         context.lineTo(x, canvas.height);
+        context.stroke();
     }
-    context.stroke();
+
+    // context.fillText('Hello world', 10, 10);
 </script>
 
 </html>
