--- a/index.html
+++ b/index.html
@@ -2,10 +2,22 @@
 <html>
 
 <head>
+    <style>
+        body {
+            text-align: center;
+            font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+        }
+        
+        canvas {
+            background-color: black;
+        }
+    </style>
 </head>
 
 <body>
+    <canvas id="asteroids" width="300" height="300"> </canvas>
 
 </body>
+<script src="grid.js"></script>
 
 </html>
