Adding code to draw human

--- a/grid.html
+++ b/grid.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title> test :|</title>
+    <title> Grid.html :|</title>
     <style>
         body {
             text-align: center;
