--- a/human.html
+++ b/human.html
@@ -16,9 +16,15 @@
             var x = 100;
             var y = 100;
             var r = 50;
-            drawhuman(c, x, y, r);
+            //drawhuman(c, x, y, r);
+            for (var i = 0; i < 600; i = i + 100) {
+                //drawhuman(c, i, y, r);
+            }
             //drawhuman(c, 150, 150, 50);
         }
+        var canvas = document.getElementById("asteroids");
+        var context = canvas.getContext('2d');
+        g.fillArc(0, 0, 150, 150, 30, 300);
     </script>
 </body>
 
