--- a/human.html
+++ b/human.html
@@ -15,6 +15,25 @@
             var c = document.getElementById("asteroids");
             drawhuman(c, 150, 150, 50);
         }
+        //---------------------------------------------------------------------------------------
+
+        var canvas = document.getElementById("asteroids");
+        var ctx = canvas.getContext('2d');
+
+        function randomHuman() {
+            for (var i = 0; i < 600; i++) {
+                ctx.clearRect(0, 0, canvas.width, canvas.height);
+                var randomX = Math.random();
+                var randomY = Math.random();
+                var randomR = Math.random();
+                var randomW = randomX * canvas.width;
+                var randomH = randomY * canvas.height;
+                var randomRa = randomR * 50;
+                drawhuman(canvas, randomW, randomH, randomRa);
+            }
+        }
+        setInterval(randomHuman, 10);
+        randomHuman();
     </script>
 </body>
 
