--- a/drawPacman.html
+++ b/drawPacman.html
@@ -16,13 +16,14 @@
         var y = 50;
         var r = 50;
 
-        function frame() {
+        function animatePacman() {
             ctx.clearRect(0, 0, canvas.width, canvas.height);
             drawPacman(x, y, r);
             x += 10;
         }
 
-        setInterval(frame, 100);
+
+        setInterval(animatePacman, 100);
     </script>
 </body>
 
