--- a/drawPacman.html
+++ b/drawPacman.html
@@ -3,7 +3,7 @@
 
 <head>
     <title> ＼⍩⃝／</title>
-    <script src="drawPacman.js"></script>
+    <script src="js/drawing.js"></script>
 </head>
 
 <body>
