--- a/human.html
+++ b/human.html
@@ -22,6 +22,9 @@
             ctx.clearRect(0, 0, canvas.width, canvas.height);
             drawhuman(canvas, x, y, r);
             x += 10;
+            if (x > canvas.width) {
+                x = 0;
+            }
         }
 
 
