--- a/oxo.html
+++ b/oxo.html
@@ -19,35 +19,68 @@
 </head>
 
 <body>
-    play tic tac toe! <br/>
+    <h1> Play Tic-Tac-Toe!</h1>
+    <p><a href="https://www.wikihow.com/Play-Tic-Tac-Toe">How to play Tic-Tac-Toe</a></p>
+
+    <button type="button" onclick="alert('Starting Game...')"> Start a Game!</button>
+    <input type="button" onclick="location.href='file:///C:/Users/sansk/Documents/GitHub/learn-javascript/oxo.html';" value="End Game" />
+
     <div>
         <div class="row">
-            <div onclick="place(this)"></div>
-            <div onclick="place(this)"></div>
-            <div onclick="place(this)"></div>
+            <div id="1_1" onclick="place(this)"></div>
+            <div id="2_1" onclick="place(this)"></div>
+            <div id="3_1" onclick="place(this)"></div>
         </div>
         <div class="row">
-            <div onclick="place(this)"></div>
-            <div onclick="place(this)"></div>
-            <div onclick="place(this)"></div>
+            <div id="1_2" onclick="place(this)"></div>
+            <div id="2_2" onclick="place(this)"></div>
+            <div id="3_2" onclick="place(this)"></div>
         </div>
         <div class="row">
-            <div onclick="place(this)"></div>
-            <div onclick="place(this)"></div>
-            <div onclick="place(this)"></div>
+            <div id="1_3" onclick="place(this)"></div>
+            <div id="2_3" onclick="place(this)"></div>
+            <div id="3_3" onclick="place(this)"></div>
         </div>
+
         <script>
             var currentPlayer = "O";
+            var gameOver = false;
 
             function place(box) {
+                if (gameOver == true) {
+                    return;
+                }
+                if (box.innerText != "")
+                    return;
                 box.innerText = currentPlayer;
-                if (currentPlayer == "O") {
-                    currentPlayer = "X";
-                } else {
-                    currentPlayer = "O";
+                currentPlayer == "O" ? currentPlayer = "X" : currentPlayer = "O";
+                checkBoard();
+            }
+
+            function checkBoard() {
+                for (var i = 1; i <= 3; i++) {
+                    var first = document.getElementById("1_" + i).innerText;
+                    var second = document.getElementById("2_" + i).innerText;
+                    var third = document.getElementById("3_" + i).innerText;
+                    if (first == "") continue;
+                    if (first == second && first == third) {
+                        alert("winner!!");
+                        gameOver = true;
+                        return;
+                    }
+                }
+                for (var i = 1; i <= 3; i++) {
+                    var first = document.getElementById(i + "_1").innerText;
+                    var second = document.getElementById(i + "_2").innerText;
+                    var third = document.getElementById(i + "_3").innerText;
+                    if (first == "") continue;
+                    if (first == second && first == third) {
+                        alert("winner!!");
+                        gameOver = true;
+                        return;
+                    }
                 }
             }
-            //place(this);
         </script>
     </div>
 </body>
