--- a/snek.html
+++ b/snek.html
@@ -25,18 +25,19 @@
         ]
         var currentYoffSet = 0;
         var squareSize = 30;
-        board.forEach(function createLine(line) {
-            line = line.split('');
+        for (var i = 0; i < board.length; ++i) {
             var currentXoffSet = 0;
-            line.forEach(function checkCharactar(character) {
-                if (character == '#') {
+            var line = board[i];
+            for (var ci = 0; ci < line.length; ++ci) {
+                console.log(line[ci]);
+                if (line[ci] == '#') {
                     ctx.fillStyle = "black";
                     ctx.fillRect(currentXoffSet, currentYoffSet, squareSize, squareSize);
                 }
                 currentXoffSet += squareSize;
-            });
+            }
             currentYoffSet += squareSize;
-        });
+        }
     </script>
 </body>
 
