--- a/snek.html
+++ b/snek.html
@@ -7,57 +7,80 @@
 </head>
 
 <body>
-    <canvas id="canvas" width="600" height="600"></canvas>
+    <canvas id="canvas" width="1000" height="1000"></canvas>
 
     <script>
         var canvas = document.getElementById("canvas");
         var ctx = canvas.getContext("2d");
-        var board = [
-            "####################",
-            "#                  #",
-            "#                  #",
-            "#       ####       #",
-            "#       ####       #",
-            "#                  #",
-            "#                  #",
-            "#                  #",
-            "####################"
-        ]
-        var squareSize = 20;
-        var currentY = 0;
-        var person = {
-            firstName: "Sanskriti",
-            lastName: "Sahu",
-            nickName: "Charvi",
-            sayHello: function Hello() {
-                alert(person.firstName + " " + person.lastName);
-            }
-
+        var game = {
+            board: [
+                "####################",
+                "#                  #",
+                "#                  #",
+                "#       ####       #",
+                "#       ####       #",
+                "#                  #",
+                "#                  #",
+                "#                  #",
+                "####################"
+            ]
+        };
+        var squareSize = 50;
+        var snake = {
+            parts: [{
+                x: 3,
+                y: 2
+            }, {
+                x: 2,
+                y: 2
+            }, {
+                x: 1,
+                y: 2
+            }],
+            facing: "E"
         };
 
-        person.sayHello();
 
 
+        var graphics = {
+            canvas: document.getElementById("canvas"),
+            squareSize: 30,
+            drawBoard: function() {
+                var ctx = graphics.canvas.getContext("2d");
+                var currentY = 0;
+                game.board.forEach(function checkLine(line) {
+                    line = line.split('');
+                    var currentX = 0;
+                    line.forEach(function checkCharac(character) {
+                        if (character == '#') {
+                            ctx.fillStyle = "black";
+                            ctx.fillRect(currentX, currentY, graphics.squareSize, graphics.squareSize);
+                        }
 
+                        currentX = currentX + graphics.squareSize;
+                    });
+                    currentY = currentY + graphics.squareSize;
+                });
+            }
+        };
 
+        graphics.drawBoard();
 
+        var snakeDrawOrg = {
 
-
-        // function drawBoard() {
-        //     for (var i = 0; i < board.length; ++i) {
-        //         var currentX = 0;
-        //         var draw = board[i];
-        //         for (var i2 = 0; i2 < draw.length; ++i2) {
-        //             if (draw[i2] == '#') {
-        //                 ctx.fillStyle = "black";
-        //                 ctx.fillRect(currentX, currentY, squareSize, squareSize);
-        //             }
-        //             currentX = currentX + squareSize;
-        //         }
-        //         currentY = currentY + squareSize;
-        //     }
-        // }
-        // drawBoard();
+            canvas: document.getElementById("canvas"),
+            drawSnake: function() {
+                var canvas = document.getElementById("canvas");
+                var ctx = graphics.canvas.getContext("2d");
+                snake.parts.forEach(function drawPart(part) {
+                    var xLocation = part.x * graphics.squareSize;
+                    var yLocation = part.y * graphics.squareSize;
+                    ctx.fillStyle = "green";
+                    ctx.fillRect(xLocation, yLocation, graphics.squareSize, graphics.squareSize);
+                });
+            }
+        }
+        snakeDrawOrg.drawSnake();
     </script>
 </body>
 
