--- a/snek.html
+++ b/snek.html
@@ -9,79 +9,7 @@
 <body>
     <canvas id="canvas" width="1000" height="1000"></canvas>
 
-    <script>
-        var canvas = document.getElementById("canvas");
-        var ctx = canvas.getContext("2d");
-        var game = {
-            board: [
-                "####################",
-                "#                  #",
-                "#                  #",
-                "#       ####       #",
-                "#       ####       #",
-                "#                  #",
-                "#                  #",
-                "#                  #",
-                "####################"
-            ]
-        };
-        var squareSize = 50;
-        var snake = {
-            parts: [{
-                x: 3,
-                y: 2
-            }, {
-                x: 2,
-                y: 2
-            }, {
-                x: 1,
-                y: 2
-            }],
-            facing: "E"
-        };
-
-
-
-        var graphics = {
-            canvas: document.getElementById("canvas"),
-            squareSize: 30,
-            drawBoard: function() {
-                var ctx = graphics.canvas.getContext("2d");
-                var currentY = 0;
-                game.board.forEach(function checkLine(line) {
-                    line = line.split('');
-                    var currentX = 0;
-                    line.forEach(function checkCharac(character) {
-                        if (character == '#') {
-                            ctx.fillStyle = "black";
-                            ctx.fillRect(currentX, currentY, graphics.squareSize, graphics.squareSize);
-                        }
-
-                        currentX = currentX + graphics.squareSize;
-                    });
-                    currentY = currentY + graphics.squareSize;
-                });
-            }
-        };
-
-        graphics.drawBoard();
-
-        var snakeDrawOrg = {
-
-            canvas: document.getElementById("canvas"),
-            drawSnake: function() {
-                var canvas = document.getElementById("canvas");
-                var ctx = graphics.canvas.getContext("2d");
-                snake.parts.forEach(function drawPart(part) {
-                    var xLocation = part.x * graphics.squareSize;
-                    var yLocation = part.y * graphics.squareSize;
-                    ctx.fillStyle = "green";
-                    ctx.fillRect(xLocation, yLocation, graphics.squareSize, graphics.squareSize);
-                });
-            }
-        }
-        snakeDrawOrg.drawSnake();
-    </script>
+    <script src="snek.js"></script>
 </body>
 
 </html>
