--- a/exe/exercise.html
+++ b/exe/exercise.html
@@ -3,7 +3,13 @@
 
 <head>
     <title> yay </title>
-    <script src="path.js"></script>
+    <style>
+        canvas {
+            background-color: green;
+        }
+    </style>
+    <canvas id="circle" width="500" height="500"> </canvas>
+    <script src="moveCircle.js"></script>
 </head>
 
 <body>
