--- a/snek.html
+++ b/snek.html
@@ -9,7 +9,7 @@
 <body>
     <canvas id="canvas" width="1000" height="1000"></canvas>
 
-    <script src="snek.js"></script>
+    <script src="js/snek.js"></script>
 </body>
 
 </html>
